# tauri-quasar-example

./: LICENSE  README.md  jsconfig.json  package.json
app/: quasar.conf.js
app/src-tauri/: tauri.conf.json
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/layouts/: MainLayout.vue
src/pages/: Index.vue
src/router/: routes.js
