workspace = { }

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Daniel Thompson-Yvetot" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"

[package.metadata.bundle]
identifier = "com.tauri.dev"
icon = [
  "icons/32x32.png",
  "icons/128x128.png",
  "icons/128x128@2x.png",
  "icons/icon.icns",
  "icons/icon.ico"
]
resources = [ "resources" ]

[dependencies]
serde_json = "1.0"
peg = "0.6.2"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.4", features = [ "all-api", "edge" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
dev-server = [ "tauri/dev-server" ]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "app"
path = "src/main.rs"
